--- a/style.css
+++ b/style.css
@@ -3,43 +3,59 @@ body{
     align-content: center;
     text-align: center;
     justify-content: center;
-
+    width: 100%;
+    height: 100%;
+    /* position: fixed; */
+    font-family: 'Lato', sans-serif;
+    margin: 0 auto;
+    color: #9a4e00;
 }
 
 /* main layout desgin */
 
 #header{
-    height: 50%;
+    height: 15%;
     border-bottom:10px;
 }
 
 #container{
-    width:100%;
-    margin: auto;
     padding: 5%;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center
   
+}
+.land {
+    padding: 30px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center
 }
 
 #main {
-margin: 0 auto;
-    align-content: center;
+    justify-items: center;
     align-items: center;
-    text-align: center;
-    width: 60%;
+    justify-content: center;
+    display: flex;
+    margin: 10px;
+    flex-direction:column
+
+
+
 }
 
 #sidebarL{
-    width: fit-content;                 
-    height: fit-content; 
-      float: left;
-      padding: 10px
+      padding: 10px;
+      justify-items: center;
+      align-items: center
 }
 
 #sidebarR{
-    width: fit-content;                 
-    height: fit-content; 
-      float: right;
-      padding: 10px
+      padding: 10px;
+      justify-items: center;
+      align-items: center
 }
 footer {
     position: fixed;
@@ -62,7 +78,7 @@ height: 111px;
 display: inline-block;
 }
 
-.button {
+.button  {
     display: block;
     width: 115px;
     height: 25px;
@@ -73,9 +89,43 @@ display: inline-block;
     color: #9a4e00;
     font-weight: bold;
     margin: 30px ;
+    font-size: 20px
+}
+.buttonn{
+    display: block;
+    width: 115px;
+    height: 50px;
+    background: #ffa700;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: #9a4e00;
+    font-weight: bold;
+    margin: 30px ;
+    font-size: 17px
 }
 
-.button:hover{
+.submit {
+    display: block;
+    width: fit-content;
+    height: fit-content;
+    background: #ffa700;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: #9a4e00;
+    font-weight: bold;
+    font-size: 24px;
+    margin: 30px ;
+}
+.plInput{
+background-color: white
+}
+.plInput:hover{
+    background:white
+}
+
+.button:hover {
     background: #ffd26e;
 }
 
@@ -86,6 +136,9 @@ li {
     padding:0;
     margin:0;
 }
+ul {
+    padding: 0;
+}
  a {
     text-decoration: none;
 }
@@ -94,14 +147,69 @@ li {
 
 /* Main */
 
-
 table {
-    align-content: center;
-    
+
+    border-collapse: collapse;
+    overflow: hidden;
+
 }
+
+
+  table {
+    overflow: hidden;
+    font-size: 20px;
+
+  }
+  td input {
+    text-align: center;
+    font-size: 20px;
+    width:40px;
+    height:40px;
+
+  } 
+
+  td {
+    height:30px;
+    width:30px;
+    border:1px solid;
+    text-align:center;
+}
+
+  
+  tr:hover {
+    background-color: #ffd26e;
+  }
+  
+  td, th {
+    position: relative;
+  }
+  td:hover::after,
+  th:hover::after {
+    content: "";
+    position: absolute;
+    background-color: #ffd26e;
+    left: 0;
+    top: -5000px;
+    height: 10000px;
+    width: 100%;
+    z-index: -1;
+  }
+  td:first-child {
+    border-left:solid;
+  }
+  td:nth-child(3n) {
+    border-right:solid ;
+  }
+  tr:first-child {
+    border-top:solid;
+  }
+  tr:nth-child(3n) td {
+    border-bottom:solid ;
+  }
 
 /* footer */
 
 .fa {
     color: #9a4e00;
 }
+
